--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <picture class="budss-works__iphone">
         <source srcset="img/iphone.webp 1x, img/iphone-retina.webp 2x" type="image/webp">
         <source srcset="img/iphone.png 1x, img/iphone-retina.png 2x" type="image/png">
-        <img src="img/success.jpg" alt="hero">
+        <img  src="img/iphone.png" alt="phone">
     </picture>
     <div class="budss-works__text budss-works__text-left1">
         How Budss Works
@@ -282,6 +282,6 @@
         </nav>
     </div>
 </footer>
-<script type="module" src="index.js"></script>
+<script defer type="module" src="index.js"></script>
 </body>
 </html>
