--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <h2 class="heading">About Budss</h2>
         <div class="about__container">
             <div class="about__container-desc">
-                <p>Payment as a service, powered seamlessly by our network of shoppers</p>
+                <p>Payment as a service, powered seamlessly by <br> <span>our network of shoppers</span></p>
             </div>
             <div class="about__container-features">
                 <div class="about__container-features-item">
